--- a/Exponential_Variable_discount_function.ipynb
+++ b/Exponential_Variable_discount_function.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "53b8dd84",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "b931715e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "9ebc2d65",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "741a6ec4",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "2e5772ca",
    "metadata": {},
    "outputs": [
@@ -88,16 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 97\n",
-      "time 1: bought for 100\n",
-      "time 2: bought for 97\n",
-      "time 3: bought for 97\n",
-      "time 4: bought for 102\n",
-      "time 5: bought for 102\n",
-      "time 6: bought for 92\n",
-      "time 7: bought for 92\n",
-      "time 8: bought for 96\n",
-      "time 9: bought for 95\n"
+      "time 0: bought for 98\n",
+      "time 1: bought for 98\n",
+      "time 2: bought for 106\n",
+      "time 3: bought for 115\n",
+      "time 4: bought for 107\n",
+      "time 5: bought for 114\n",
+      "time 6: bought for 111\n",
+      "time 7: bought for 108\n",
+      "time 8: bought for 107\n",
+      "time 9: bought for 111\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "bd074fd2",
    "metadata": {},
    "outputs": [],
@@ -128,18 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "e4bc1a2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conservative = (buy_exp, sell_exp)\n",
-    "agressive = (sell_exp, buy_exp)"
+    "conservative_exp = (buy_exp, sell_exp)\n",
+    "aggressive_exp = (sell_exp, buy_exp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "5ab70c4e",
    "metadata": {},
    "outputs": [
@@ -149,27 +149,27 @@
      "text": [
       "time 0: bought for 102\n",
       "time 1: bought for 99\n",
-      "time 2: bought for 89\n",
-      "time 3: bought for 84\n",
-      "time 4: bought for 78\n",
-      "time 5: bought for 79\n",
-      "time 6: bought for 88\n",
-      "time 7: bought for 90\n",
-      "time 8: bought for 89\n",
-      "time 9: bought for 85\n"
+      "time 2: bought for 94\n",
+      "time 3: bought for 89\n",
+      "time 4: bought for 93\n",
+      "time 5: bought for 99\n",
+      "time 6: bought for 90\n",
+      "time 7: bought for 89\n",
+      "time 8: bought for 84\n",
+      "time 9: bought for 91\n"
      ]
     }
    ],
    "source": [
     "for time in range (max_time):\n",
     "    price = start_price + random.randint(-10, 10)\n",
-    "    decision_function = variable_decision(price, time, conservative)\n",
+    "    decision_function = variable_decision(price, time, conservative_exp)\n",
     "    decision_function(price, time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "13ac4a01",
    "metadata": {},
    "outputs": [
@@ -177,30 +177,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0:sold for 3\n",
-      "time 1:sold for -6\n",
-      "time 2:sold for 5\n",
-      "time 3:sold for 7\n",
-      "time 4:sold for -5\n",
-      "time 5:sold for -9\n",
-      "time 6:sold for 1\n",
-      "time 7:sold for -10\n",
-      "time 8:sold for -9\n",
-      "time 9:sold for -1\n"
+      "time 0:sold for -10\n",
+      "time 1:sold for 3\n",
+      "time 2:sold for -8\n",
+      "time 3:sold for 1\n",
+      "time 4:sold for 8\n",
+      "time 5:sold for 2\n",
+      "time 6:sold for -9\n",
+      "time 7:sold for -4\n",
+      "time 8:sold for 8\n",
+      "time 9:sold for 6\n"
      ]
     }
    ],
    "source": [
     "for time in range (max_time):\n",
     "    price = start_price + random.randint(-10, 10)\n",
-    "    decision_function = variable_decision(price, time, agressive)\n",
+    "    decision_function = variable_decision(price, time, aggressive_exp)\n",
     "    decision_function(price, time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "ee662c8d",
+   "execution_count": 12,
+   "id": "1af374a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "d14a6dff",
+   "execution_count": 13,
+   "id": "4a39fa84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "807fe576",
+   "execution_count": 14,
+   "id": "279e512f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,19 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "3e28bad6",
+   "execution_count": 15,
+   "id": "85e7204c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conservative = (buy, hold, sell)\n",
-    "aggressive = (sell, hold, buy)"
+    "conservative = (sell, hold, buy)\n",
+    "aggressive = (buy, hold, sell)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "9aacdcf0",
+   "execution_count": 16,
+   "id": "110bda18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,14 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "b58c3a0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_decision(price, time, decision_model, strategy, position, start_price):\n",
     "    if time == 0:\n",
-    "        return decision_model[0]\n",
+    "        if callable(decision_model[0]):\n",
+    "            return decision_model[0](position, price, start_price, max_time, rate, time)\n",
+    "        else:\n",
+    "            return decision_model[0]\n",
     "    else:\n",
     "        discounted_price = price * exponential_discount(time, rate)\n",
     "        if time >= 2:\n",
@@ -282,23 +285,23 @@
     "            volatility = 0\n",
     "        if strategy == \"conservative\":\n",
     "            if discounted_price < start_price - 2*volatility:\n",
-    "                return decision_model[0](position, price, start_price, max_time, rate, time)\n",
+    "                return -1\n",
     "            elif discounted_price > start_price + moving_average:\n",
-    "                return decision_model[1](position, price, start_price, max_time, rate, time)\n",
+    "                return 1\n",
     "            else:\n",
-    "                return decision_model[2](position, price, start_price, max_time, rate, time)\n",
+    "                return 0\n",
     "        elif strategy == \"aggressive\":\n",
     "            if discounted_price < start_price - volatility:\n",
-    "                return decision_model[0](position, price, start_price, max_time, rate, time)\n",
+    "                return -1\n",
     "            elif discounted_price > start_price + 2*moving_average:\n",
-    "                return decision_model[1](position, price, time)\n",
+    "                return 1\n",
     "            else:\n",
-    "                return decision_model[2](position, price, start_price, max_time, rate, time)"
+    "                return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "6688e5ea",
    "metadata": {},
    "outputs": [
@@ -307,18 +310,15 @@
      "output_type": "stream",
      "text": [
       "Simulating using conservative decision model:\n",
-      "time 1: bought for 97\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [62]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m price \u001b[38;5;241m=\u001b[39m start_price \u001b[38;5;241m+\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      8\u001b[0m decision_function \u001b[38;5;241m=\u001b[39m make_decision(price, time, conservative, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconservative\u001b[39m\u001b[38;5;124m\"\u001b[39m, position, start_price)\n\u001b[1;32m----> 9\u001b[0m position \u001b[38;5;241m=\u001b[39m \u001b[43mdecision_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m prices\u001b[38;5;241m.\u001b[39mappend(price)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+      "time 1: sold for 95\n",
+      "time 2: sold for 93\n",
+      "time 3: sold for 104\n",
+      "time 4: held at 109\n",
+      "time 5: sold for 103\n",
+      "time 6: sold for 107\n",
+      "time 7: sold for 100\n",
+      "time 8: sold for 92\n",
+      "time 9: sold for 97\n"
      ]
     }
    ],
@@ -326,41 +326,67 @@
     "print(\"Simulating using conservative decision model:\")\n",
     "\n",
     "position = 0\n",
-    "prices = [start_price]\n",
+    "prices = [start_price] * max_time\n",
     "\n",
     "for time in range(1, max_time):\n",
     "    price = start_price + random.randint(-10, 10)\n",
     "    decision_function = make_decision(price, time, conservative, \"conservative\", position, start_price)\n",
-    "    position = decision_function(price, time)\n",
-    "    prices.append(price)"
+    "    if decision_function == 1:\n",
+    "        position = 1\n",
+    "        print(f'time {time}: bought for {price}')\n",
+    "    elif decision_function == -1:\n",
+    "        position = 1\n",
+    "        print(f'time {time}: sold for {price}')\n",
+    "    else:\n",
+    "        print(f'time {time}: held at {price}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "7bc8fc1d",
+   "execution_count": 21,
+   "id": "03840a87",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-100"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulating using agressive decision model:\n",
+      "time 1: sold for 102\n",
+      "time 2: sold for 94\n",
+      "time 3: sold for 99\n",
+      "time 4: sold for 91\n",
+      "time 5: sold for 92\n",
+      "time 6: sold for 90\n",
+      "time 7: sold for 97\n",
+      "time 8: sold for 91\n",
+      "time 9: sold for 97\n"
+     ]
     }
    ],
    "source": [
-    "profit_conservative = (position * prices[-1]) - start_price\n",
-    "profit_conservative"
+    "print(\"Simulating using agressive decision model:\")\n",
+    "\n",
+    "position = 0\n",
+    "prices = [start_price] * max_time\n",
+    "\n",
+    "for time in range(1, max_time):\n",
+    "    price = start_price + random.randint(-10, 10)\n",
+    "    decision_function = make_decision(price, time, aggressive, \"aggressive\", position, start_price)\n",
+    "    if decision_function == 1:\n",
+    "        position = 1\n",
+    "        print(f'time {time}: bought for {price}')\n",
+    "    elif decision_function == -1:\n",
+    "        position = 1\n",
+    "        print(f'time {time}: sold for {price}')\n",
+    "    else:\n",
+    "        print(f'time {time}: held at {price}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03840a87",
+   "id": "75a49275",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -368,7 +394,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200e205b",
+   "id": "7d3b5006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1000b0f3",
    "metadata": {},
    "outputs": [],
    "source": []
