--- a/Exponential_Variable_discount_function.ipynb
+++ b/Exponential_Variable_discount_function.ipynb
@@ -88,16 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 98\n",
-      "time 1: bought for 98\n",
-      "time 2: bought for 106\n",
-      "time 3: bought for 115\n",
-      "time 4: bought for 107\n",
-      "time 5: bought for 114\n",
-      "time 6: bought for 111\n",
-      "time 7: bought for 108\n",
-      "time 8: bought for 107\n",
-      "time 9: bought for 111\n"
+      "time 0: bought for 106\n",
+      "time 1: bought for 108\n",
+      "time 2: bought for 99\n",
+      "time 3: bought for 89\n",
+      "time 4: bought for 92\n",
+      "time 5: bought for 88\n",
+      "time 6: bought for 80\n",
+      "time 7: bought for 85\n",
+      "time 8: bought for 94\n",
+      "time 9: bought for 97\n"
      ]
     }
    ],
@@ -147,16 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 102\n",
-      "time 1: bought for 99\n",
-      "time 2: bought for 94\n",
-      "time 3: bought for 89\n",
-      "time 4: bought for 93\n",
-      "time 5: bought for 99\n",
-      "time 6: bought for 90\n",
-      "time 7: bought for 89\n",
-      "time 8: bought for 84\n",
-      "time 9: bought for 91\n"
+      "time 0: bought for 104\n",
+      "time 1: bought for 95\n",
+      "time 2: bought for 89\n",
+      "time 3: bought for 96\n",
+      "time 4: bought for 104\n",
+      "time 5: bought for 94\n",
+      "time 6: bought for 100\n",
+      "time 7: bought for 106\n",
+      "time 8: bought for 104\n",
+      "time 9: bought for 98\n"
      ]
     }
    ],
@@ -177,16 +177,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0:sold for -10\n",
-      "time 1:sold for 3\n",
-      "time 2:sold for -8\n",
-      "time 3:sold for 1\n",
-      "time 4:sold for 8\n",
-      "time 5:sold for 2\n",
-      "time 6:sold for -9\n",
-      "time 7:sold for -4\n",
-      "time 8:sold for 8\n",
-      "time 9:sold for 6\n"
+      "time 0:sold for 8\n",
+      "time 1:sold for -9\n",
+      "time 2:sold for 9\n",
+      "time 3:sold for 3\n",
+      "time 4:sold for 1\n",
+      "time 5:sold for 5\n",
+      "time 6:sold for 5\n",
+      "time 7:sold for 7\n",
+      "time 8:sold for 0\n",
+      "time 9:sold for 10\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1af374a1",
+   "id": "2e5f86d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a39fa84",
+   "id": "0175f325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "279e512f",
+   "id": "2368ac5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "85e7204c",
+   "id": "fe6d3343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "110bda18",
+   "id": "3e28dd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,148 +263,112 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b58c3a0e",
+   "id": "764a1540",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_decision(price, time, decision_model, strategy, position, start_price):\n",
-    "    if time == 0:\n",
-    "        if callable(decision_model[0]):\n",
-    "            return decision_model[0](position, price, start_price, max_time, rate, time)\n",
-    "        else:\n",
-    "            return decision_model[0]\n",
-    "    else:\n",
-    "        discounted_price = price * exponential_discount(time, rate)\n",
-    "        if time >= 2:\n",
-    "            moving_average = (price + prices[time-1] + prices[time-2])/3\n",
-    "        else:\n",
-    "            moving_average = price\n",
-    "        if time >= 4:\n",
-    "            volatility = sum(abs(price - p) for p in prices[time-4:time])/5\n",
-    "        else:\n",
-    "            volatility = 0\n",
-    "        if strategy == \"conservative\":\n",
-    "            if discounted_price < start_price - 2*volatility:\n",
-    "                return -1\n",
-    "            elif discounted_price > start_price + moving_average:\n",
-    "                return 1\n",
-    "            else:\n",
-    "                return 0\n",
-    "        elif strategy == \"aggressive\":\n",
-    "            if discounted_price < start_price - volatility:\n",
-    "                return -1\n",
-    "            elif discounted_price > start_price + 2*moving_average:\n",
-    "                return 1\n",
-    "            else:\n",
-    "                return 0"
+    "def get_discount(time):\n",
+    "    return 1/(1 + time)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6688e5ea",
+   "id": "b58c3a0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating using conservative decision model:\n",
-      "time 1: sold for 95\n",
-      "time 2: sold for 93\n",
-      "time 3: sold for 104\n",
-      "time 4: held at 109\n",
-      "time 5: sold for 103\n",
-      "time 6: sold for 107\n",
-      "time 7: sold for 100\n",
-      "time 8: sold for 92\n",
-      "time 9: sold for 97\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Simulating using conservative decision model:\")\n",
-    "\n",
-    "position = 0\n",
-    "prices = [start_price] * max_time\n",
-    "\n",
-    "for time in range(1, max_time):\n",
-    "    price = start_price + random.randint(-10, 10)\n",
-    "    decision_function = make_decision(price, time, conservative, \"conservative\", position, start_price)\n",
-    "    if decision_function == 1:\n",
-    "        position = 1\n",
-    "        print(f'time {time}: bought for {price}')\n",
-    "    elif decision_function == -1:\n",
-    "        position = 1\n",
-    "        print(f'time {time}: sold for {price}')\n",
+    "def make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor):\n",
+    "    action = strategy[time % 3]\n",
+    "    discount_factor = get_discount(time)\n",
+    "    current_price = price * (discount_factor ** (time - 1))\n",
+    "    if action == \"buy\":\n",
+    "        if position == 0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "    elif action == \"sell\":\n",
+    "        if position == 1:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return 0\n",
     "    else:\n",
-    "        print(f'time {time}: held at {price}')"
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
+   "id": "6688e5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_strategy(start_price, max_time, strategy, strategy_name, discount_factor):\n",
+    "    position = 0\n",
+    "    prices = [start_price] * max_time\n",
+    "    total_profit = 0\n",
+    "\n",
+    "    for time in range(1, max_time):\n",
+    "        price = start_price + random.randint(-10, 10)\n",
+    "        discount_factor = get_discount(time)\n",
+    "        decision_function = make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor)\n",
+    "        \n",
+    "        if decision_function == 1:\n",
+    "            if position == 0:\n",
+    "                position = 1\n",
+    "                print(f'time {time}: bought for {price}')\n",
+    "            elif position == -1:\n",
+    "                position = 1\n",
+    "                total_profit += price - prices[time - 1]\n",
+    "                print(f'time {time}: bought for {price}, total profit: {total_profit}')\n",
+    "            else:\n",
+    "                print(f'time {time}: held at {price}')\n",
+    "                \n",
+    "        elif decision_function == -1:\n",
+    "            if position == 0:\n",
+    "                position = -1\n",
+    "                print(f'time {time}: sold for {price}')\n",
+    "            elif position == 1:\n",
+    "                position = -1\n",
+    "                total_profit += prices[time - 1] - price\n",
+    "                print(f'time {time}: sold for {price}, total profit: {total_profit}')\n",
+    "            else:\n",
+    "                print(f'time {time}: held at {price}')\n",
+    "                \n",
+    "        else:\n",
+    "            print(f'time {time}: held at {price}')\n",
+    "            \n",
+    "        prices[time] = price\n",
+    "        \n",
+    "    return total_profit     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "03840a87",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating using agressive decision model:\n",
-      "time 1: sold for 102\n",
-      "time 2: sold for 94\n",
-      "time 3: sold for 99\n",
-      "time 4: sold for 91\n",
-      "time 5: sold for 92\n",
-      "time 6: sold for 90\n",
-      "time 7: sold for 97\n",
-      "time 8: sold for 91\n",
-      "time 9: sold for 97\n"
+     "ename": "NameError",
+     "evalue": "name 'discount_factor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m conservative_profit \u001b[38;5;241m=\u001b[39m simulate_strategy(start_price, max_time, conservative, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconservative\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mdiscount_factor\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'discount_factor' is not defined"
      ]
     }
    ],
    "source": [
-    "print(\"Simulating using agressive decision model:\")\n",
-    "\n",
-    "position = 0\n",
-    "prices = [start_price] * max_time\n",
-    "\n",
-    "for time in range(1, max_time):\n",
-    "    price = start_price + random.randint(-10, 10)\n",
-    "    decision_function = make_decision(price, time, aggressive, \"aggressive\", position, start_price)\n",
-    "    if decision_function == 1:\n",
-    "        position = 1\n",
-    "        print(f'time {time}: bought for {price}')\n",
-    "    elif decision_function == -1:\n",
-    "        position = 1\n",
-    "        print(f'time {time}: sold for {price}')\n",
-    "    else:\n",
-    "        print(f'time {time}: held at {price}')"
+    "conservative_profit = simulate_strategy(start_price, max_time, conservative, 'conservative', discount_factor)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a49275",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d3b5006",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1000b0f3",
+   "id": "0b7da73d",
    "metadata": {},
    "outputs": [],
    "source": []
