--- a/Exponential_Variable_discount_function.ipynb
+++ b/Exponential_Variable_discount_function.ipynb
@@ -88,16 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 106\n",
-      "time 1: bought for 108\n",
-      "time 2: bought for 99\n",
-      "time 3: bought for 89\n",
-      "time 4: bought for 92\n",
-      "time 5: bought for 88\n",
-      "time 6: bought for 80\n",
-      "time 7: bought for 85\n",
-      "time 8: bought for 94\n",
-      "time 9: bought for 97\n"
+      "time 0: bought for 104\n",
+      "time 1: bought for 97\n",
+      "time 2: bought for 100\n",
+      "time 3: bought for 107\n",
+      "time 4: bought for 102\n",
+      "time 5: bought for 112\n",
+      "time 6: bought for 120\n",
+      "time 7: bought for 115\n",
+      "time 8: bought for 111\n",
+      "time 9: bought for 113\n"
      ]
     }
    ],
@@ -147,16 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 104\n",
-      "time 1: bought for 95\n",
-      "time 2: bought for 89\n",
-      "time 3: bought for 96\n",
-      "time 4: bought for 104\n",
-      "time 5: bought for 94\n",
-      "time 6: bought for 100\n",
-      "time 7: bought for 106\n",
-      "time 8: bought for 104\n",
-      "time 9: bought for 98\n"
+      "time 0: bought for 120\n",
+      "time 1: bought for 112\n",
+      "time 2: bought for 118\n",
+      "time 3: bought for 122\n",
+      "time 4: bought for 119\n",
+      "time 5: bought for 114\n",
+      "time 6: bought for 122\n",
+      "time 7: bought for 115\n",
+      "time 8: bought for 109\n",
+      "time 9: bought for 115\n"
      ]
     }
    ],
@@ -177,16 +177,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0:sold for 8\n",
+      "time 0:sold for 9\n",
       "time 1:sold for -9\n",
-      "time 2:sold for 9\n",
-      "time 3:sold for 3\n",
-      "time 4:sold for 1\n",
-      "time 5:sold for 5\n",
-      "time 6:sold for 5\n",
-      "time 7:sold for 7\n",
-      "time 8:sold for 0\n",
-      "time 9:sold for 10\n"
+      "time 2:sold for -9\n",
+      "time 3:sold for 1\n",
+      "time 4:sold for 7\n",
+      "time 5:sold for 9\n",
+      "time 6:sold for -3\n",
+      "time 7:sold for -2\n",
+      "time 8:sold for -9\n",
+      "time 9:sold for -10\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buy(position, price, start_price, max_time, rate, time):\n",
+    "def buy(position, price, start_price, max_time, discount_factor, time):\n",
     "    start_price = price\n",
     "    position +=1\n",
     "    print(f'time {time}: bought for {price}')\n",
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sell(position, price, start_price, max_time, rate, time):\n",
+    "def sell(position, price, start_price, max_time, discount_factor, time):\n",
     "    start_price = price\n",
     "    position -=1\n",
     "    print(f'time {time}: sold for {price}')\n",
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hold(position, price, start_price, max_time, rate, time):\n",
+    "def hold(position, price, start_price, max_time, discount_factor, time):\n",
     "    print(f'time {time}: held at {price}')\n",
     "    return position"
    ]
@@ -256,7 +256,6 @@
    "outputs": [],
    "source": [
     "start_price = 100\n",
-    "rate = 0.05\n",
     "max_time = 10"
    ]
   },
@@ -274,31 +273,36 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "fefa6221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discount_factor = get_discount(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "b58c3a0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor):\n",
     "    action = strategy[time % 3]\n",
-    "    discount_factor = get_discount(time)\n",
     "    current_price = price * (discount_factor ** (time - 1))\n",
     "    if action == \"buy\":\n",
     "        if position == 0:\n",
     "            return 1\n",
-    "        else:\n",
-    "            return 0\n",
     "    elif action == \"sell\":\n",
     "        if position == 1:\n",
     "            return -1\n",
-    "        else:\n",
-    "            return 0\n",
     "    else:\n",
     "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "6688e5ea",
    "metadata": {},
    "outputs": [],
@@ -310,7 +314,6 @@
     "\n",
     "    for time in range(1, max_time):\n",
     "        price = start_price + random.randint(-10, 10)\n",
-    "        discount_factor = get_discount(time)\n",
     "        decision_function = make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor)\n",
     "        \n",
     "        if decision_function == 1:\n",
@@ -345,19 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "03840a87",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'discount_factor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m conservative_profit \u001b[38;5;241m=\u001b[39m simulate_strategy(start_price, max_time, conservative, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconservative\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mdiscount_factor\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'discount_factor' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 1: held at 95\n",
+      "time 2: held at 108\n",
+      "time 3: held at 94\n",
+      "time 4: held at 106\n",
+      "time 5: held at 92\n",
+      "time 6: held at 95\n",
+      "time 7: held at 91\n",
+      "time 8: held at 100\n",
+      "time 9: held at 96\n"
      ]
     }
    ],
@@ -367,8 +374,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0b7da73d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 1: held at 92\n",
+      "time 2: held at 95\n",
+      "time 3: held at 91\n",
+      "time 4: held at 109\n",
+      "time 5: held at 110\n",
+      "time 6: held at 110\n",
+      "time 7: held at 99\n",
+      "time 8: held at 100\n",
+      "time 9: held at 106\n"
+     ]
+    }
+   ],
+   "source": [
+    "aggressive_profit = simulate_strategy(start_price, max_time, aggressive, 'aggressive', discount_factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abecf189",
    "metadata": {},
    "outputs": [],
    "source": []
