--- a/Exponential_Variable_discount_function.ipynb
+++ b/Exponential_Variable_discount_function.ipynb
@@ -88,16 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 104\n",
-      "time 1: bought for 97\n",
-      "time 2: bought for 100\n",
-      "time 3: bought for 107\n",
-      "time 4: bought for 102\n",
-      "time 5: bought for 112\n",
-      "time 6: bought for 120\n",
-      "time 7: bought for 115\n",
-      "time 8: bought for 111\n",
-      "time 9: bought for 113\n"
+      "time 0: bought for 110\n",
+      "time 1: bought for 113\n",
+      "time 2: bought for 106\n",
+      "time 3: bought for 112\n",
+      "time 4: bought for 106\n",
+      "time 5: bought for 114\n",
+      "time 6: bought for 122\n",
+      "time 7: bought for 127\n",
+      "time 8: bought for 122\n",
+      "time 9: bought for 124\n"
      ]
     }
    ],
@@ -147,16 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 0: bought for 120\n",
-      "time 1: bought for 112\n",
-      "time 2: bought for 118\n",
-      "time 3: bought for 122\n",
-      "time 4: bought for 119\n",
-      "time 5: bought for 114\n",
-      "time 6: bought for 122\n",
-      "time 7: bought for 115\n",
-      "time 8: bought for 109\n",
-      "time 9: bought for 115\n"
+      "time 0: bought for 127\n",
+      "time 1: bought for 128\n",
+      "time 2: bought for 132\n",
+      "time 3: bought for 123\n",
+      "time 4: bought for 133\n",
+      "time 5: bought for 140\n",
+      "time 6: bought for 133\n",
+      "time 7: bought for 143\n",
+      "time 8: bought for 142\n",
+      "time 9: bought for 149\n"
      ]
     }
    ],
@@ -178,15 +178,15 @@
      "output_type": "stream",
      "text": [
       "time 0:sold for 9\n",
-      "time 1:sold for -9\n",
-      "time 2:sold for -9\n",
-      "time 3:sold for 1\n",
-      "time 4:sold for 7\n",
-      "time 5:sold for 9\n",
-      "time 6:sold for -3\n",
-      "time 7:sold for -2\n",
-      "time 8:sold for -9\n",
-      "time 9:sold for -10\n"
+      "time 1:sold for 3\n",
+      "time 2:sold for -5\n",
+      "time 3:sold for -1\n",
+      "time 4:sold for -1\n",
+      "time 5:sold for -2\n",
+      "time 6:sold for -9\n",
+      "time 7:sold for -5\n",
+      "time 8:sold for -3\n",
+      "time 9:sold for 7\n"
      ]
     }
    ],
@@ -244,8 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conservative = (sell, hold, buy)\n",
-    "aggressive = (buy, hold, sell)"
+    "strategies = {'conservative':('sell', 'hold', 'buy'), 'aggressive': ('buy', 'hold', 'sell')}"
    ]
   },
   {
@@ -267,88 +266,58 @@
    "outputs": [],
    "source": [
     "def get_discount(time):\n",
-    "    return 1/(1 + time)"
+    "    discount_rate = 0.95 ** time\n",
+    "    return discount_rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fefa6221",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "discount_factor = get_discount(time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "b58c3a0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor):\n",
-    "    action = strategy[time % 3]\n",
-    "    current_price = price * (discount_factor ** (time - 1))\n",
-    "    if action == \"buy\":\n",
-    "        if position == 0:\n",
-    "            return 1\n",
-    "    elif action == \"sell\":\n",
-    "        if position == 1:\n",
-    "            return -1\n",
+    "def make_decision(price, time, strategy, strategy_name, position, start_price, get_discount):\n",
+    "    threshold = start_price * get_discount(time)\n",
+    "    \n",
+    "    if price > threshold:\n",
+    "        return buy\n",
+    "    elif price < threshold / 2:\n",
+    "        return sell\n",
     "    else:\n",
-    "        return 0"
+    "        return hold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "6688e5ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_strategy(start_price, max_time, strategy, strategy_name, discount_factor):\n",
+    "def simulate_strategy(max_time, start_price, strategy, strategy_name, get_discount):\n",
     "    position = 0\n",
     "    prices = [start_price] * max_time\n",
-    "    total_profit = 0\n",
-    "\n",
     "    for time in range(1, max_time):\n",
     "        price = start_price + random.randint(-10, 10)\n",
-    "        decision_function = make_decision(price, time, strategy, strategy_name, position, start_price, discount_factor)\n",
-    "        \n",
+    "        decision_function = make_decision(price, time, strategies, strategy_name, position, start_price, get_discount)\n",
     "        if decision_function == 1:\n",
-    "            if position == 0:\n",
-    "                position = 1\n",
-    "                print(f'time {time}: bought for {price}')\n",
-    "            elif position == -1:\n",
-    "                position = 1\n",
-    "                total_profit += price - prices[time - 1]\n",
-    "                print(f'time {time}: bought for {price}, total profit: {total_profit}')\n",
-    "            else:\n",
-    "                print(f'time {time}: held at {price}')\n",
-    "                \n",
+    "            position = 1\n",
+    "            print(f'time {time}: bought for {price}')\n",
     "        elif decision_function == -1:\n",
-    "            if position == 0:\n",
-    "                position = -1\n",
-    "                print(f'time {time}: sold for {price}')\n",
-    "            elif position == 1:\n",
-    "                position = -1\n",
-    "                total_profit += prices[time - 1] - price\n",
-    "                print(f'time {time}: sold for {price}, total profit: {total_profit}')\n",
-    "            else:\n",
-    "                print(f'time {time}: held at {price}')\n",
-    "                \n",
+    "            position = -1\n",
+    "            print(f'time {time}: sold for {price}')\n",
     "        else:\n",
     "            print(f'time {time}: held at {price}')\n",
-    "            \n",
     "        prices[time] = price\n",
-    "        \n",
-    "    return total_profit     "
+    "    total_profit = (prices[-1] - prices[0]) * position\n",
+    "    return total_profit\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "03840a87",
    "metadata": {},
    "outputs": [
@@ -356,25 +325,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 1: held at 95\n",
-      "time 2: held at 108\n",
-      "time 3: held at 94\n",
-      "time 4: held at 106\n",
-      "time 5: held at 92\n",
-      "time 6: held at 95\n",
-      "time 7: held at 91\n",
-      "time 8: held at 100\n",
-      "time 9: held at 96\n"
+      "time 1: held at 99\n",
+      "time 2: held at 109\n",
+      "time 3: held at 108\n",
+      "time 4: held at 107\n",
+      "time 5: held at 99\n",
+      "time 6: held at 96\n",
+      "time 7: held at 104\n",
+      "time 8: held at 96\n",
+      "time 9: held at 102\n"
      ]
     }
    ],
    "source": [
-    "conservative_profit = simulate_strategy(start_price, max_time, conservative, 'conservative', discount_factor)"
+    "conservative_profit = simulate_strategy(max_time, start_price, strategies, 'conservative', get_discount)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "0b7da73d",
    "metadata": {},
    "outputs": [
@@ -382,26 +351,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 1: held at 92\n",
-      "time 2: held at 95\n",
-      "time 3: held at 91\n",
-      "time 4: held at 109\n",
-      "time 5: held at 110\n",
-      "time 6: held at 110\n",
+      "time 1: held at 94\n",
+      "time 2: held at 104\n",
+      "time 3: held at 99\n",
+      "time 4: held at 108\n",
+      "time 5: held at 95\n",
+      "time 6: held at 106\n",
       "time 7: held at 99\n",
-      "time 8: held at 100\n",
-      "time 9: held at 106\n"
+      "time 8: held at 110\n",
+      "time 9: held at 98\n"
      ]
     }
    ],
    "source": [
-    "aggressive_profit = simulate_strategy(start_price, max_time, aggressive, 'aggressive', discount_factor)"
+    "aggressive_profit = simulate_strategy(max_time, start_price, strategies, 'aggressive', get_discount)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abecf189",
+   "id": "09d73fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd25498",
    "metadata": {},
    "outputs": [],
    "source": []
